CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(HELLO)

# SET(SRC_LIST main.c)
# MESSAGE(STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
# MESSAGE(STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})
# ADD_executable(hello ${SRC_LIST})

ADD_SUBDIRECTORY(src bin)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
# INSTALL(TARGETS bin/ RUNTIME DESTINATION bin)